# contextmine

./: .agents.yaml  .env.example  .gitignore  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PLANS.md  README.md  catalog-info.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  sonar-project.properties  vulture_whitelist.py
.claude/agents/: repo-researcher.md
.github/workflows/: build.yml  ci.yml  security.yml
apps/api/: Dockerfile  entrypoint.sh  pyproject.toml
apps/api/app/: __init__.py  main.py  mcp_auth.py  mcp_server.py  rate_limit.py
apps/api/app/middleware/: __init__.py  session.py
apps/api/app/routes/: auth.py  collections.py  context.py  db.py  documents.py  health.py  mcp_tokens.py  metrics_ingest.py  prefect.py  runs.py  search.py  sources.py  twin.py  validation.py
apps/api/tests/: __init__.py  conftest.py  test_auth.py  test_collections.py  test_context.py  test_db.py  test_final_coverage.py  test_github_sync.py  test_health.py  test_mcp.py  test_mcp_async_coverage.py  test_mcp_coverage_extra.py  test_mcp_final.py  test_mcp_knowledge.py  test_mcp_resources.py  test_mcp_tokens.py  test_mcp_tools.py  test_mcp_tools_extended.py  test_metrics_ingest.py  test_routes_collections.py  test_routes_documents.py  test_routes_misc.py  test_routes_sources.py  test_routes_twin.py  test_routes_twin_extended.py  test_routes_twin_views.py  test_runs.py  test_search.py  test_sources.py  test_twin_routes_final.py  test_twin_views.py  test_twin_views_arc42.py  test_twin_views_erm.py  test_twin_views_ports_adapters.py  test_web_sync.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/web/e2e/: cockpit.spec.ts
apps/web/src/: App.css  App.test.tsx  App.tsx  CockpitPage.tsx  faro.test.ts  faro.ts  index.css  main.tsx
apps/web/src/cockpit/: CockpitPage.test.tsx  CockpitPage.tsx  cockpit.css  flags.test.ts  flags.ts  graphUtils.test.ts  graphUtils.ts  types.test.ts  types.ts
apps/web/src/cockpit/components/: CockpitCommandBar.test.tsx  CockpitCommandBar.tsx  CockpitHeader.test.tsx  CockpitHeader.tsx  CockpitTabs.test.tsx  CockpitTabs.tsx  GraphRagProcessModal.test.tsx  GraphRagProcessModal.tsx  NodeInspector.helpers.test.ts  NodeInspector.test.tsx  NodeInspector.tsx  ViewShell.test.tsx  ViewShell.tsx
apps/web/src/cockpit/hooks/: useCockpitData.test.ts  useCockpitData.ts  useCockpitState.test.ts  useCockpitState.ts
apps/web/src/cockpit/layout/: layoutCore.test.ts  layoutCore.ts  layoutWorker.ts
apps/web/src/cockpit/utils/: mermaidUtils.test.ts  mermaidUtils.ts
apps/web/src/cockpit/views/: ArchitectureView.test.tsx  ArchitectureView.tsx  C4DiffView.test.tsx  C4DiffView.tsx  CityView.test.tsx  CityView.tsx  DeepDiveView.test.tsx  DeepDiveView.tsx  EvolutionView.test.tsx  EvolutionView.tsx  ExportsView.test.tsx  ExportsView.tsx  GraphRagView.test.tsx  GraphRagView.tsx  OverviewView.test.tsx  OverviewView.tsx  RebuildReadinessView.helpers.test.ts  RebuildReadinessView.test.tsx  RebuildReadinessView.tsx  SemanticMapView.test.tsx  SemanticMapView.tsx  TestMatrixView.test.tsx  TestMatrixView.tsx  TopologyView.test.tsx  TopologyView.tsx
apps/web/src/lib/: formatters.test.ts  formatters.ts  sseReader.test.ts  sseReader.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/contextmine_worker/: __init__.py  chunking.py  embeddings.py  flows.py  github_sync.py  init_prefect.py  main.py  symbol_indexing.py  telemetry.py  web_sync.py
apps/worker/contextmine_worker/agents/: deployment.py
apps/worker/tests/: test_chunking.py  test_embeddings.py  test_final_coverage.py  test_flows_async.py  test_flows_coverage.py  test_flows_final.py  test_flows_path_filter.py  test_flows_pipelines.py  test_flows_scip_helpers.py  test_flows_sync_timeout.py  test_flows_unit.py  test_github_sync.py  test_github_sync_coverage.py  test_github_sync_metrics.py  test_symbol_indexing.py  test_web_sync.py  test_worker_misc.py
deploy/helm/contextmine/: Chart.yaml  README.md  values-production.yaml  values-servicemesh.yaml  values.yaml
deploy/helm/contextmine/templates/: _helpers.tpl  configmap.yaml  ingress.yaml  secret.yaml
deploy/helm/contextmine/templates/api/: deployment.yaml  service.yaml
deploy/helm/contextmine/templates/codecharta/: deployment.yaml  ingress.yaml  middleware.yaml  service.yaml
deploy/helm/contextmine/templates/monitoring/: grafana-dashboard.yaml  prometheusrule.yaml  servicemonitor.yaml
deploy/helm/contextmine/templates/postgres/: service.yaml  statefulset.yaml
deploy/helm/contextmine/templates/prefect/: deployment.yaml  service.yaml
deploy/helm/contextmine/templates/worker/: deployment.yaml  pvc.yaml
docs/: KNOWLEDGE_GRAPH.md  agent_fleet_setup.md  agent_specs.md  development.md  extracted_views_qa_checklist.md  index.md  mcp.md  prompt.md  prompts2.md  prompts3.md  prompts4.md  prompts5.md  scip_polyglot_indexing.md
docs/design/: graphrag_implementation.md  grounded-llm-detection.md
docs/diataxis/explanation/: strict_metrics_pipeline.md
docs/diataxis/how-to/: validate_cockpit_browser.md
docs/diataxis/reference/: cockpit_contracts.md
docs/diataxis/tutorials/: first_cockpit_walkthrough.md
docs/research-agent/: 00-plan.md  01-artifacts.md  02-llm-provider.md  03-agent.md  04-lsp.md  05-treesitter.md  06-graph.md  07-verification.md  08-claude-code-subagent.md
rust/spider_md/: Cargo.toml  README.md
rust/spider_md/src/: main.rs
scripts/: init-db.sh  init-db.sql  mcp_smoke_test.py
scripts/docker/: init-db.sh  init-db.sql  smoke-pg4ai.sh
scripts/docker/otel/: otel-collector-config.yaml
scripts/docker/postgres/: Dockerfile  init-db.sh
