[project]
name = "contextmine"
version = "0.1.0"
description = "Open-source local Context7 alternative with MCP retrieval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a1",
    "pytest>=8.0.0",
    "anyio[trio]>=4.0.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.28.0",
    "pre-commit>=4.0.0",
]

[tool.uv.workspace]
members = ["apps/api", "apps/worker", "packages/*"]

[tool.uv.sources]
contextmine-core = { workspace = true }
contextmine-worker = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.12"
python = ".venv"

[tool.ty.rules]
# Ignore false positives from library stubs (Starlette, Prefect, Anthropic)
invalid-argument-type = "ignore"
no-matching-overload = "ignore"
# Test mocking patterns trigger this
invalid-assignment = "ignore"
# Optional attribute access in tests
possibly-missing-attribute = "ignore"
# Optional dependencies (multilspy, etc.) may not be installed
unresolved-import = "ignore"
# Test code uses `in` operator with Optional types
unsupported-operator = "ignore"

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "node_modules"]
skips = [
    "B101",  # assert warnings (used in tests)
    "B104",  # 0.0.0.0 bind (intentional for containers)
    "B105",  # hardcoded password false positives on URLs
    "B110",  # try/except/pass (intentional fallbacks)
    "B404",  # subprocess import (needed for spider-md binary)
    "B603",  # subprocess without shell (spider-md binary)
    "B608",  # SQL injection false positive on prompt templates
]
