[project]
name = "contextmine-api"
version = "0.1.0"
description = "ContextMine API server with FastAPI and MCP"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "fastmcp>=3.4.2",
    "contextmine-core",
    "contextmine-worker",
    "itsdangerous>=2.2.0",
    "httpx>=0.28.1",
    "slowapi>=0.1.10",
    "prometheus-fastapi-instrumentator>=8.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
