[project]
name = "contextmine-worker"
version = "0.1.0"
description = "ContextMine Prefect worker for syncing sources"
requires-python = ">=3.12"
dependencies = [
    "contextmine-core",
    "prefect>=3.0.0",
    "gitpython>=3.1.0",
    "langchain-text-splitters>=0.2.0",
    "openai>=2.0.0",
    "anthropic>=0.30.0",
    "google-genai>=1.0.0",
    "tenacity>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contextmine_worker"]
