[project]
name = "contextmine-worker"
version = "0.1.0"
description = "ContextMine Prefect worker for syncing sources"
requires-python = ">=3.12"
dependencies = [
    "contextmine-core",
    "prefect>=3.7.5",
    "gitpython>=3.1.50",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.44.0",
    "anthropic>=0.112.0",
    "google-genai>=2.10.0",
    "tenacity>=9.1.4",
    "lizard>=1.23.0",
    "trafilatura>=2.1.0",
    "lxml_html_clean>=0.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contextmine_worker"]
