[package]
name = "spider_md"
version = "0.1.0"
edition = "2021"
description = "Web crawler that converts HTML to Markdown with strict URL scoping"

[dependencies]
clap = { version = "4", features = ["derive"] }
spider = { version = "2", default-features = false, features = ["basic", "cache", "headers"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
fast_html2md = "0"

[[bin]]
name = "spider_md"
path = "src/main.rs"
